# Blogger

./: .gitattributes  .gitignore  Bluetooth.txt  Camtasia.txt  CleanCode.txt  CodeBlocks.txt  Cybersecurity.txt  Emulicious.txt  GameMakerStudio.txt  Github.txt  GoogleCollab.ipynb  GoogleVirus.txt  ITisDead.txt  ImagineIE.txt  MAME.txt  MFA.txt  ML.NET.txt  Miscellaneous.txt  MyRobots.txt  NewPosts2022.txt  RDP.txt  README.md  SkyUpdate.txt  Windows11UpdatePrevent.txt  blog.txt  cpp.txt  theme-8584570627780730363.xml
3DcityII/: 01-Intro.txt  TODO.txt  links.txt  thyWiki_31082019.txt  wiki.txt
AI/: AI_Agents.txt  CUDA_nvcc.txt  ChatGPT.txt  ComputerFuture.txt  DeepLearning.txt  GithubCopilot.txt  GolandConcurrentTests.txt  LinearAlgebra.txt  ML_libraries.txt  Miscellaneous.txt  NumPy.txt  OpenSourceAIworkflows.txt  Python.txt  ReinforcementYT.txt  Studying.txt  TODO.txt  YouTube.txt  _IMPORTANT_OpenAI.txt  anaconda.txt  blogger.txt  bob.txt  chatGPT-API.txt  courses.txt  definitions.txt  eBPF_futrue.txt  eBPF_futrue2.txt  openai_retro.txt  retrospectives.txt  twitter.txt  vector.txt
AI/CUDA/uv/: README.md  README_02.md  README_03.md  README_04.md  pyproject.toml
AI/CUDA/uvnew/: README.md  pyproject.toml
AI/GPU/Example/: CMakeLists.txt  hello.cu  readme.md
AI/GPU/HelloCUDA/: CMakeLists.txt  README.md  hello.cu
Android/: AndroidStudio.txt  Error.txt  Families.txt  History.txt  Itinerary.txt  Loacation.txt  Port.txt  TODO.txt  Tables.xlsx  Upload03.txt  anSETUP.txt  anSETUP02.txt  anTABLES.txt  iOS.txt
CandyKidCodeComplete/: Introduction.txt  MyYouTube.txt  anNOTES.txt  iframe_youtube.txt  summary.txt  table_ROMhack.txt  table_images.txt  tables_bonus.txt  thyWiki02_11052020.txt  thyWiki03_12052020.txt  wiki.txt
Cloud/: CLIs.txt  Golang.txt  TODO.txt  WIPtables.xls  Windows.txt  YouTube_GoogleK8sBestPractices.txt  _anLAYOUT.txt  anINFO.txt  minikube.txt  tables.xls  terraform.txt
DefleMask/: Articles.txt  Keyboard.txt  YouTube.txt  anINTRO.txt  notes.txt
Doom/: .~lock.TableFormula.xls#  01-Intro.txt  03-WAD.txt  04-Bible.txt  10-Documentation.txt  10-prboom.html  10-prboom.txt  12-prboom.txt  20-DoomRetro.txt  24-DoomRetro.txt  40-Summary.txt  PRboomPlus.txt  PRboomPlusII.txt  PRboomPlusIII.txt  PRboomPlusYT.txt  SourceCode.txt  TableFormula.xls  WADfiles.txt  __twitter.txt  _anIntro.txt  _published.txt  _todo.txt  anLAYOUT.txt  anNOTES.txt  anNOTES03.txt  commands.txt  hfile.txt  newPRboomPlus.txt  newRetroDoom.txt  todo.txt  wiki.txt
GameBoyDevKit/: .~lock.URLs.xls#  GameBoy.txt  HelloWorld.txt  LaroldsJubilantJunkyard.txt  URLs.txt  URLs.xls  _blogger.txt  anLINKS.txt  codesamples.txt  deployment.txt  gbdk_comp2023.txt  lcc.txt  setup.txt
GitHub/: CherryPick.txt  ForkRepo.txt  GitLab.txt  RabbitVCS.txt  Rebase.txt  SSH_keys.txt  SourceTree.txt  SourceTree02.txt  gitattributes.txt
GoLang/: 00-LAYOUT.txt  01-Install.txt  02-IDE.txt  03-IDE_02.txt  05-HelloGoLand.txt  05-Summary.txt  Concurrency.txt  DebuggingDLV.txt  GameDev.txt  GoByExample.txt  GoENVvars.txt  GoLand.txt  GoLandSettings.txt  GoLand_Plugins.txt  GoLand_Shortcuts.txt  GoRepoASM.txt  Gostd.txt  IDE.txt  IMP_config.txt  Interfaces.txt  KillProcess.txt  Misc.txt  SegFaults.txt  Shoirtcuts.txt  Strings.txt  StructInterface.txt  TODO.txt  The Go Programming Language.txt  _installation.txt  anlinks.txt  cgo.txt  shortcuts.txt  unittesting.txt  wiki.txt
Golang/: 01-TODO.txt  02-TODO.txt  Concurrency.txt  GolandIDE.txt  RemoteIDE.txt  golangci-lint.txt  gotask.txt
GoogleAnalytics/: aaNOTES.txt  anMETHOD.txt  theme_16-May-2023.xml  theme_17-May-2023.xml
LilEvelKnievelCodeComplete/: 00Layout.txt  01-Intro.txt  Instrucitons.txt  TODO.txt  aaOUTLINE.txt  anTopics.txt  command.txt  debugging.txt  iframeYT.txt  mechanics.txt  miscText.txt  physics.txt  riffs.txt  slackMsg.txt  sprites.txt  summary.txt  table_hack.txt  table_screens.txt  table_tools.txt  table_video.txt  wiki.txt
Linux/: Backup.txt  BlackScreenDeath.txt  C++Setup.txt  CLI.txt  Desktop.txt  Directories.txt  Displays.txt  Find.txt  InitialSetup.txt  KernelBuild.txt  LinuxCommandsDevOps.txt  LinuxDebug.txt  LinuxSetup.docx  LinuxSetup.html  LinuxUnderTheHood.txt  RepoPR.txt  Resolution.txt  SRE.txt  SimpleScreenRecorder  System.txt  TODO.txt  Tools.txt  VNCserver.txt  VSCode.txt  YouTube.txt  _anNOTES.txt  _anNOTES_02.txt  _title.txt  aaLAYOUT.txt  anLINKS.txt  anLOCATIONS.txt  ax-Insto.txt  bb-Windows.txt  bb-Windows02.txt  bb-Windows03.txt  cc-MacOSX.txt  dd-Setup.txt  mount.txt  vscode.txt  wiki.txt  (+1 more)
Linux/MyCCpp/eBPF/: Articles.txt  CMakeLists.txt  Examples.txt  Interesting.txt  TODO.txt  YouTube.txt  anSETUP.txt
LinuxII/: TODO.txt  aa-General.txt  aa-Insto.txt  amendment.txt  bb-Software.txt  bc-Software02.txt  cc-IDEs.txt  dd-Misc.txt  ee-Games.txt  wiki.txt
LinuxIII/: BlogPosts.txt  FreeUpDiskspace.txt  LinuxTransition.docx  Login.txt  Trash.txt
MacOS/: Applications.txt  Docker.txt  Keyboard.txt  Kubernetes.txt  NotDoing.txt  RecoveryMode.txt  Sound.txt  SystemSettings.txt  TODO.txt  TableFormula.xls  Teams.txt  VNC.txt  bash_profileW.txt  extra.txt  publish.txt  readme.md  scp.txt  ssh.txt  twitter.txt
Makefile/: Commands.txt  Debugging.txt  Errors.txt  MakefileTutorial.txt  Symbols.txt  YouTube.txt  remake_debugger.txt
MegaDrivePort/: 00-Intro.txt  01-Intro.txt  01-Introl.txt  02-SetupProject.txt  03-SetupResources.txt  04-SetupFolders.txt  APIcompare.txt  SimpsonsPort.txt  SimpsonsWarn.txt  TODO.txt  _IMP_notes.txt  aXLINKS.txt  anNOTES.txt  anNOTESII.txt  convertAPIs.txt  notes.txt  screens.txt  wiki.txt
MegaEverdrivePro/: BrainDump.txt  Setup.txt  StoneAgeGamer.txt
MobileVideoGameUpdates/: AndroidLatest.txt  AndroidLaunch.txt  AppIcons.txt  GoogleUpdate.txt  HotSwap.txt  MonoGamePipeline.txt  Publication.txt  TLDR.txt  TODO.txt  TODO02.txt  Tables.txt  Upload_Android.txt  _launch.txt  anINTRO.txt  anPRE-Reqs.txt  axImages.txt  axLINKS.txt  axTables.txt  azIMPORTANT.txt  (+3 more)
Python/Setup05_packages_ARCH/examples/poetry/3104/: pyproject.toml
Python/_Setup05_packages_ARCH/examples/poetry/3820/: pyproject.toml
(+3516 files in other folders)
