[project]
name = "3Duvnew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.19,<3.12"
dependencies = [
    "numpy<=1.26.4",
    "packaging>=25.0",
    "azure-storage-blob>=12.27.1",
    "azureml-contrib-services>=1.60.0",
    "azureml-inference-server-http>=1.5.0",
    "azureml-sdk>=1.48.0",
    "hydra-core>=1.3.2",
    "imageio>=2.37.2",
    "lightning>=2.5.6",
    "locust>=2.42.5",
    "open3d>=0.19.0",
    "opencv-python<4.12.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "prettytable>=3.17.0",
    "pyrender>=0.1.45",
    "ray[tune]>=2.51.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.2.0+cu121",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.7.7",
    "torchsparse @ git+https://github.com/mit-han-lab/torchsparse.git@v2.0.0",
    "torch-scatter==2.1.2+pt22cu121; platform_system != 'Windows'",
    "torch-sparse==0.6.18+pt22cu121; platform_system != 'Windows'",
    "torch-cluster==1.6.3+pt22cu121; platform_system != 'Windows'",
    "torch-spline-conv==1.2.2+pt22cu121; platform_system != 'Windows'",
    "pyg-lib==0.4.0+pt22cu121; platform_system != 'Windows'",
    "transformers>=4.57.1",
    "torch-geometric>=2.7.0",
    "websockets",
#   "solv_core"
]

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.9",
    "pytest-regressions>=2.5.0",
    "syrupy>=4.7.1",
    "pre-commit>=3.7.1",
    "twine>=5.1.1",
    "ipython",       # removed version requirement
    "pdoc3>=0.11.1",
    "pytest-xdist>=3.8.0"
]

[tool.uv.extra-build-dependencies]
file = ["setuptools"]
build = ["numpy<=1.26.4"]
pytorch3d = ["torch==2.2.0+cu121", "numpy<=1.26.4"]
torchsparse = ["torch==2.2.0+cu121", "numpy<=1.26.4", "ninja", "tqdm"]
torch-cluster = ["torch", "numpy<=1.26.4"]
torch-scatter = ["torch", "numpy<=1.26.4"]
torch-sparse = ["torch", "numpy<=1.26.4"]
torch-spline-conv = ["torch", "numpy<=1.26.4"]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.2.0+cu121.html"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
